# SFML-Portfolio

./: CMakeLists.txt  MouseEvents.cpp  MouseEvents.h  PortfolioApplication.cpp  PortfolioApplication.h  PortfolioImages.cpp  PortfolioImages.h  Position.cpp  Position.h  README.md  Runnable.h  SFMLObject.h  TODO.txt  Thumbnail.cpp  Thumbnail.h  main.cpp
BouncingBallProject/: Ball.cpp  Ball.h  BouncingBallApplication.cpp  BouncingBallApplication.h
FinalGameProject/: AnimatedSpriteComponent.cpp  AnimatedSpriteComponent.h  Bitmask.cpp  Bitmask.h  CameraComponent.cpp  CameraComponent.h  Chunk.cpp  Chunk.h  CollisionDetector.cpp  CollisionDetector.h  DamageComponent.cpp  DamageComponent.h  Enemy.cpp  Enemy.h  FinalGameApplication.cpp  FinalGameApplication.h  FinalGameImages.cpp  FinalGameImages.h  GameObject.h  Goomba.cpp  Goomba.h  HealthComponent.cpp  HealthComponent.h  HitboxComponent.cpp  HitboxComponent.h  InputComponent.cpp  InputComponent.h  Koopa.cpp  Koopa.h  MovementComponent.cpp  MovementComponent.h  MusicManager.cpp  MusicManager.h  ObjectPool.cpp  ObjectPool.h  PhysicsComponent.cpp  PhysicsComponent.h  Player.cpp  Player.h  Solid.cpp  (+14 more)
GreenCricleProject/: GreenCircle.cpp  GreenCircle.h  GreenCircleApplication.cpp  GreenCircleApplication.h
PhaserProject/: PhaserAnimatedSprite.cpp  PhaserAnimatedSprite.h  PhaserApplication.cpp  PhaserApplication.h  PhaserComponent.h  PhaserEventHandleable.h
PlayingCardProject/: Background.cpp  Background.h  CardSFML.cpp  CardSFML.h  Component.h  Font.cpp  Font.h  Images.cpp  Images.h  PlayingCardApplication.cpp  PlayingCardApplication.h  Rank.cpp  Rank.h  Ranks.h  Suit.cpp  Suit.h  Suits.h
PokerAnalysisProject/: CardHandSFML.cpp  CardHandSFML.h  CardHandScorer.cpp  CardHandScorer.h  ConsoleCard.cpp  ConsoleCard.h  ConsoleCardHand.cpp  ConsoleCardHand.h  ConsoleDeck.cpp  ConsoleDeck.h  PokerAnalysisApplication.cpp  PokerAnalysisApplication.h  PokerScore.cpp  PokerScore.h  SetHand.cpp  SetHand.h  SimulatePokerRounds.cpp  SimulatePokerRounds.h  TextBox.cpp  TextBox.h
SFML_2D_ARRAY_PROJECT/: Grid.h  SFMLGrid.cpp  SFMLGrid.h  sfml2DArrayApplication.cpp  sfml2DArrayApplication.h
